# feemaster-backend

./: .env  .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  Procfile  README.md  README_COMPLETE_IMPLEMENTATION.md  README_SUPABASE.md  check_uv.py  create_admin_user.py  create_execute_sql_function.sql  database.sql  dummy_data.sql  fix_execute_sql_function.sql  main.py  pyproject.toml  render.yaml  requirements.txt  setup_supabase.py  start.py  storage.sql  storage_dummy_data.sql  test_auth.py  test_cors.py  test_frontend_auth.py  test_supabase_auth.py
.Documents/: .~lock.QUICKBOOKS IMPORT CSV.csv#  QUICKBOOKS IMPORT CSV.csv
app/: __init__.py  config.py  database.py  main.py  models.py
app/auth/: __init__.py  supabase_auth.py
app/routes/: auth.py  dashboard.py  errors.py  financial.py  integrations.py  messaging.py  parent_portal.py  parents.py  payments.py  quickbooks.py  reports.py  settings.py  students.py  test_sentry.py  tumeny.py
app/services/: advanced_analytics_service.py  analytics_service.py  audit_service.py  bulk_operations_service.py  cache_service.py  integration_service.py  notification_service.py  payment_gateway_service.py  quickbooks_service.py  receipt_service.py  tumeny_service.py  twilio_service.py  websocket_service.py  whatsapp_service.py
app/utils/: logging.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.js  App.tsx  index.css
frontend/src/pages/: Dashboard.js  (+1 more)
tests/: README.md  debug_students.py  test_dashboard_endpoints.py  test_raw_query.py
(+10 files in other folders)
