pip install "numpy<1.26.2"[project]
name = "fee-master-backend"
version = "2.1.0"
description = "Fee Master Backend - School Administration System"
authors = [
    {name = "Fee Master Team", email = "info@feemaster.edu"}
]
readme = "README_SUPABASE.md"
requires-python = ">=3.8.1"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "supabase>=2.0.2",
    "python-multipart>=0.0.6",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "httpx>=0.24.0,<0.25.0",
    "jinja2>=3.1.2",
    "aiofiles>=23.2.1",
    "openpyxl>=3.1.2",
    "reportlab>=4.0.7",
    "pandas>=1.5.3,<2.0.0",
    "numpy>=1.24.0,<2.0.0",
    "pillow>=10.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88 